--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
   <section class="contact" id="contact">
     <div class="container">
       <h2 class="section-title">Contact Us</h2>
-      <form action="submit_form.php" method="POST">
-        <input type="text" name="name" placeholder="Your Name" required />
-        <input type="email" name="email" placeholder="Your Email" required />
-        <textarea name="message" placeholder="Tell us about your project..." required></textarea>
-        <button type="submit">Send Message</button>
+      <form>
+        <input type="text" placeholder="Your Name" disabled />
+        <input type="email" placeholder="Your Email" disabled />
+        <textarea placeholder="Tell us about your project..." disabled></textarea>
+        <button type="button" disabled>Send Message</button>
       </form>
     </div>
   </section>
