--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <input type="text" placeholder="Your Name" disabled />
         <input type="email" placeholder="Your Email" disabled />
         <textarea placeholder="Tell us about your project..." disabled></textarea>
-        <button type="button" disabled>Send Message</button>
+        <button type="button" disabled>Send Message - disabled for demo</button>
       </form>
     </div>
   </section>
