--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ironwood Renos</title>
   <link rel="stylesheet" href="css/style.css" />
+  <script src="https://unpkg.com/netlify-cms@2.13.0/dist/netlify-cms.js"></script>
+
 </head>
 <body>
 
