migrated service section to tailwind

--- a/index.html
+++ b/index.html
@@ -24,22 +24,29 @@
     </div>
   </section>
 
+  <!-- Services Section (Tailwind) -->
+  <section class="bg-bg-light">
+    <div class="container py-16 md:py-20 text-center">
+      <h2 class="text-2xl mb-6 text-primary font-semibold">Our Services</h2>
 
-  <!-- Services Section -->
-  <section class="services">
-    <h2>Our Services</h2>
-    <div class="service-list">
-      <div class="service-card">
-        <h3>Kitchen & Bath Renovations</h3>
-        <p>Custom cabinetry, tile work, and full remodels designed to add beauty and functionality to your home.</p>
-      </div>
-      <div class="service-card">
-        <h3>Basement Finishing</h3>
-        <p>Transform your basement into a comfortable living space or entertainment area.</p>
-      </div>
-      <div class="service-card">
-        <h3>Decks & Outdoor Structures</h3>
-        <p>Durable and beautiful decks, pergolas, and outdoor additions built for Canadian weather.</p>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5 md:gap-6">
+        <!-- Card -->
+        <div class="bg-white border border-gray-200 rounded-sm shadow-sm p-5 text-left">
+          <h3 class="text-primary font-semibold mb-2">Kitchen &amp; Bath Renovations</h3>
+          <p>Custom cabinetry, tile work, and full remodels designed to add beauty and functionality to your home.</p>
+        </div>
+
+        <!-- Card -->
+        <div class="bg-white border border-gray-200 rounded-sm shadow-sm p-5 text-left">
+          <h3 class="text-primary font-semibold mb-2">Basement Finishing</h3>
+          <p>Transform your basement into a comfortable living space or entertainment area.</p>
+        </div>
+
+        <!-- Card -->
+        <div class="bg-white border border-gray-200 rounded-sm shadow-sm p-5 text-left">
+          <h3 class="text-primary font-semibold mb-2">Decks &amp; Outdoor Structures</h3>
+          <p>Durable and beautiful decks, pergolas, and outdoor additions built for Canadian weather.</p>
+        </div>
       </div>
     </div>
   </section>
