migrated the what clients say section to tailwind

--- a/index.html
+++ b/index.html
@@ -66,20 +66,34 @@
   </section>
 
 
-  <!-- Testimonials Section -->
-  <section class="testimonials">
-    <h2>What Clients Say</h2>
-    <div class="testimonial">
-      <blockquote>“Ironwood completely transformed our kitchen — the craftsmanship is outstanding!”</blockquote>
-      <cite>— Sarah L., Kingston</cite>
-    </div>
-    <div class="testimonial">
-      <blockquote>“Reliable, clean, and professional. Our new deck looks fantastic.”</blockquote>
-      <cite>— Mark R., Napanee</cite>
-    </div>
-    <div class="testimonial">
-      <blockquote>“They treated our home like their own. Highly recommended.”</blockquote>
-      <cite>— Laura P., Amherstview</cite>
+  <!-- Testimonials Section (Tailwind) -->
+  <section class="bg-bg-alt">
+    <div class="container py-16 md:py-20 text-center">
+      <h2 class="text-2xl mb-6 text-primary font-semibold">What Clients Say</h2>
+
+      <div class="mx-auto max-w-xl mb-8">
+        <blockquote class="italic">
+          <span class="align-top text-primary text-2xl mr-1"></span>
+          Ironwood completely transformed our kitchen — the craftsmanship is outstanding!
+        </blockquote>
+        <cite class="not-italic text-muted block mt-2">— Sarah L., Kingston</cite>
+      </div>
+
+      <div class="mx-auto max-w-xl mb-8">
+        <blockquote class="italic">
+          <span class="align-top text-primary text-2xl mr-1"></span>
+          Reliable, clean, and professional. Our new deck looks fantastic.
+        </blockquote>
+        <cite class="not-italic text-muted block mt-2">— Mark R., Napanee</cite>
+      </div>
+
+      <div class="mx-auto max-w-xl">
+        <blockquote class="italic">
+          <span class="align-top text-primary text-2xl mr-1"></span>
+          They treated our home like their own. Highly recommended.
+        </blockquote>
+        <cite class="not-italic text-muted block mt-2">— Laura P., Amherstview</cite>
+      </div>
     </div>
   </section>
 
