migrated the contact section to tailwind

--- a/index.html
+++ b/index.html
@@ -97,10 +97,16 @@
     </div>
   </section>
 
-  <!-- Contact -->
-  <section class="contact" id="contact">
-    <h2>Contact</h2>
-    <p style="text-align:center;color:#666;">Demo site — form intentionally disabled.</p>
+  <!-- Contact Section (Tailwind) -->
+  <section class="bg-bg-form" id="contact">
+    <div class="container py-16 md:py-20 text-center">      
+      <a
+        href="#"
+        class="inline-block bg-primary text-white font-semibold rounded-sm shadow-sm px-6 py-3 hover:opacity-95 focus:outline-none focus-visible:ring-2 focus-visible:ring-primary/60"
+      >
+        Contact Us
+      </a>
+    </div>
   </section>
 
   <!-- Footer -->
