migrated footer to tailwind

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="mx-auto max-w-xl mb-8">
         <blockquote class="italic">
           <span class="align-top text-primary text-2xl mr-1"></span>
-          Ironwood completely transformed our kitchen — the craftsmanship is outstanding!
+          Ironwood completely transformed our kitchen — their work is outstanding!
         </blockquote>
         <cite class="not-italic text-muted block mt-2">— Sarah L., Kingston</cite>
       </div>
@@ -82,7 +82,7 @@
       <div class="mx-auto max-w-xl mb-8">
         <blockquote class="italic">
           <span class="align-top text-primary text-2xl mr-1"></span>
-          Reliable, clean, and professional. Our new deck looks fantastic.
+          Reliable, clean, and professional. Our new family room looks fantastic.
         </blockquote>
         <cite class="not-italic text-muted block mt-2">— Mark R., Napanee</cite>
       </div>
@@ -104,15 +104,18 @@
         href="#"
         class="inline-block bg-primary text-white font-semibold rounded-sm shadow-sm px-6 py-3 hover:opacity-95 focus:outline-none focus-visible:ring-2 focus-visible:ring-primary/60"
       >
-        Contact Us
+        Contact Us        
       </a>
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Ironwood Renos. Portfolio project by Code Forged Digital.</p>
+  <!-- Footer (Tailwind) -->
+  <footer class="bg-footer-bg text-footer-text text-center">
+    <div class="container py-5 text-sm">
+      <p>© 2025 Ironwood Renos. Portfolio project by Code Forged Digital Inc.</p>
+    </div>
   </footer>
+
 
 </body>
 </html>
