--- a/index.html
+++ b/index.html
@@ -5,28 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ironwood Renos</title>
 
-  <!-- Tailwind build (Phase 4) -->
+  <!-- Tailwind build -->
   <link rel="stylesheet" href="css/tw.css"/>
-  <!-- Legacy CSS (kept for non-hero sections) -->
+  <!-- Minimal legacy CSS (kept) -->
   <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 
-  <!-- Hero Section (Tailwind) -->
+  <!-- Hero Section -->
   <section class="text-white" style="background-image:url('images/ironwood-renos-banner.webp'); background-size:cover; background-position:center;">
-    <div class="container py-16 md:py-20 text-center">
+    <div class="section text-center">
       <h1 class="text-hero-xl font-semibold mb-2">Ironwood Renos</h1>
-      <p class="text-lg mb-6">Quality Renovations Built to Last</p>
-      <a href="#contact"
-        class="inline-block bg-primary text-white font-semibold rounded-sm shadow-sm px-6 py-3 hover:opacity-95 focus:outline-none focus-visible:ring-2 focus-visible:ring-white/80">
-      Request a Quote
-      </a>
+      <p class="text-lg">Quality Renovations Built to Last</p>
+      <!-- CTA intentionally removed (footer holds the only CTA) -->
     </div>
   </section>
 
-  <!-- Services Section (Tailwind) -->
+  <!-- Services Section -->
   <section class="bg-bg-light">
-    <div class="container py-16 md:py-20 text-center">
+    <div class="section text-center">
       <h2 class="text-2xl mb-6 text-primary font-semibold">Our Services</h2>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5 md:gap-6">
@@ -51,9 +48,9 @@
     </div>
   </section>
 
-  <!-- Gallery Section (Tailwind) -->
+  <!-- Gallery Section -->
   <section>
-    <div class="container py-16 md:py-20">
+    <div class="section">
       <h2 class="text-2xl mb-6 text-primary font-semibold text-center">Featured Projects</h2>
 
       <div class="grid gap-4 sm:gap-5 md:gap-6 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
@@ -65,15 +62,14 @@
     </div>
   </section>
 
-
-  <!-- Testimonials Section (Tailwind) -->
+  <!-- Testimonials Section -->
   <section class="bg-bg-alt">
-    <div class="container py-16 md:py-20 text-center">
+    <div class="section text-center">
       <h2 class="text-2xl mb-6 text-primary font-semibold">What Clients Say</h2>
 
       <div class="mx-auto max-w-xl mb-8">
         <blockquote class="italic">
-          <span class="align-top text-primary text-2xl mr-1"></span>
+          <span class="align-top text-primary text-2xl mr-1">“</span>
           Ironwood completely transformed our kitchen — their work is outstanding!
         </blockquote>
         <cite class="not-italic text-muted block mt-2">— Sarah L., Kingston</cite>
@@ -81,7 +77,7 @@
 
       <div class="mx-auto max-w-xl mb-8">
         <blockquote class="italic">
-          <span class="align-top text-primary text-2xl mr-1"></span>
+          <span class="align-top text-primary text-2xl mr-1">“</span>
           Reliable, clean, and professional. Our new family room looks fantastic.
         </blockquote>
         <cite class="not-italic text-muted block mt-2">— Mark R., Napanee</cite>
@@ -89,7 +85,7 @@
 
       <div class="mx-auto max-w-xl">
         <blockquote class="italic">
-          <span class="align-top text-primary text-2xl mr-1"></span>
+          <span class="align-top text-primary text-2xl mr-1">“</span>
           They treated our home like their own. Highly recommended.
         </blockquote>
         <cite class="not-italic text-muted block mt-2">— Laura P., Amherstview</cite>
@@ -97,25 +93,17 @@
     </div>
   </section>
 
-  <!-- Contact Section (Tailwind) -->
-  <section class="bg-bg-form" id="contact">
-    <div class="container py-16 md:py-20 text-center">      
-      <a
-        href="#"
-        class="inline-block bg-primary text-white font-semibold rounded-sm shadow-sm px-6 py-3 hover:opacity-95 focus:outline-none focus-visible:ring-2 focus-visible:ring-primary/60"
-      >
-        Contact Us        
+  <!-- Footer -->
+  <footer class="bg-footer-bg text-footer-text text-sm">
+    <div class="container py-5 flex flex-col sm:flex-row items-center justify-between">
+      <p>© 2025 Ironwood Renos. Portfolio project by Code Forged Digital.</p>
+
+      <a href="#"
+         class="mt-4 sm:mt-0 inline-block bg-primary text-white font-semibold rounded-sm shadow-sm px-4 py-2 transition hover:opacity-95 focus:outline-none focus-visible:ring-2 focus-visible:ring-primary/60">
+        Request a Quote
       </a>
     </div>
-  </section>
-
-  <!-- Footer (Tailwind) -->
-  <footer class="bg-footer-bg text-footer-text text-center">
-    <div class="container py-5 text-sm">
-      <p>© 2025 Ironwood Renos. Portfolio project by Code Forged Digital Inc.</p>
-    </div>
   </footer>
-
 
 </body>
 </html>
