--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <title>Ironwood Renos</title>
 
   <!-- Tailwind build -->
-  <link rel="stylesheet" href="css/tw.css"/>
-  <!-- Minimal legacy CSS (kept) -->
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="css/tw.css"/>    
 </head>
 <body>
 
@@ -24,23 +22,23 @@
   <!-- Services Section -->
   <section class="bg-bg-light">
     <div class="section text-center">
-      <h2 class="text-2xl mb-6 text-primary font-semibold">Our Services</h2>
+      <h2 class="section-title">Our Services</h2>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5 md:gap-6">
         <!-- Card -->
-        <div class="bg-white border border-gray-200 rounded-sm shadow-sm p-5 text-left">
+        <div class="card">
           <h3 class="text-primary font-semibold mb-2">Kitchen &amp; Bath Renovations</h3>
           <p>Custom cabinetry, tile work, and full remodels designed to add beauty and functionality to your home.</p>
         </div>
 
         <!-- Card -->
-        <div class="bg-white border border-gray-200 rounded-sm shadow-sm p-5 text-left">
+        <div class="card">
           <h3 class="text-primary font-semibold mb-2">Basement Finishing</h3>
           <p>Transform your basement into a comfortable living space or entertainment area.</p>
         </div>
 
         <!-- Card -->
-        <div class="bg-white border border-gray-200 rounded-sm shadow-sm p-5 text-left">
+        <div class="card">
           <h3 class="text-primary font-semibold mb-2">Decks &amp; Outdoor Structures</h3>
           <p>Durable and beautiful decks, pergolas, and outdoor additions built for Canadian weather.</p>
         </div>
@@ -51,13 +49,13 @@
   <!-- Gallery Section -->
   <section>
     <div class="section">
-      <h2 class="text-2xl mb-6 text-primary font-semibold text-center">Featured Projects</h2>
+      <h2 class="section-title">Featured Projects</h2>
 
       <div class="grid gap-4 sm:gap-5 md:gap-6 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
-        <img src="images/project1.jpg" alt="Cedar Deck Project" class="w-full h-64 object-cover rounded-sm shadow-sm block">
-        <img src="images/project2.jpg" alt="Modern Bathroom Remodel" class="w-full h-64 object-cover rounded-sm shadow-sm block">
-        <img src="images/project3.jpg" alt="Open-Concept Kitchen" class="w-full h-64 object-cover rounded-sm shadow-sm block">
-        <img src="images/project4.jpg" alt="Basement Lounge" class="w-full h-64 object-cover rounded-sm shadow-sm block">
+        <img src="images/project1.jpg" alt="Cedar Deck Project" class="img-tile">
+        <img src="images/project2.jpg" alt="Modern Bathroom Remodel" class="img-tile">
+        <img src="images/project3.jpg" alt="Open-Concept Kitchen" class="img-tile">
+        <img src="images/project4.jpg" alt="Basement Lounge" class="img-tile">
       </div>
     </div>
   </section>
@@ -65,9 +63,9 @@
   <!-- Testimonials Section -->
   <section class="bg-bg-alt">
     <div class="section text-center">
-      <h2 class="text-2xl mb-6 text-primary font-semibold">What Clients Say</h2>
+      <h2 class="section-title">What Clients Say</h2>
 
-      <div class="mx-auto max-w-xl mb-8">
+      <div class="testimonial mb-8">
         <blockquote class="italic">
           <span class="align-top text-primary text-2xl mr-1">“</span>
           Ironwood completely transformed our kitchen — their work is outstanding!
@@ -75,7 +73,7 @@
         <cite class="not-italic text-muted block mt-2">— Sarah L., Kingston</cite>
       </div>
 
-      <div class="mx-auto max-w-xl mb-8">
+      <div class="testimonial mb-8">
         <blockquote class="italic">
           <span class="align-top text-primary text-2xl mr-1">“</span>
           Reliable, clean, and professional. Our new family room looks fantastic.
@@ -83,7 +81,7 @@
         <cite class="not-italic text-muted block mt-2">— Mark R., Napanee</cite>
       </div>
 
-      <div class="mx-auto max-w-xl">
+      <div class="testimonial">
         <blockquote class="italic">
           <span class="align-top text-primary text-2xl mr-1">“</span>
           They treated our home like their own. Highly recommended.
@@ -98,8 +96,7 @@
     <div class="container py-5 flex flex-col sm:flex-row items-center justify-between">
       <p>© 2025 Ironwood Renos. Portfolio project by Code Forged Digital.</p>
 
-      <a href="#"
-         class="mt-4 sm:mt-0 inline-block bg-primary text-white font-semibold rounded-sm shadow-sm px-4 py-2 transition hover:opacity-95 focus:outline-none focus-visible:ring-2 focus-visible:ring-primary/60">
+      <a href="#" class="mt-4 sm:mt-0 btn-primary-sm">
         Request a Quote
       </a>
     </div>
