--- a/index.html
+++ b/index.html
@@ -1,44 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ironwood Renos</title>
 
   <!-- Tailwind build -->
-  <link rel="stylesheet" href="css/tw.css"/>    
+  <link rel="stylesheet" href="css/tw.css" />
 </head>
+
 <body>
 
-<!-- Hero Section (full image, no cropping, no Tailwind rebuild required) -->
-<section class="text-white text-center" style="position:relative;">
-  <!-- Full image keeps its natural aspect ratio -->
+  <!-- Demo Notice Banner -->
+  <div style="
+    background: #222;
+    color: #fff;
+    text-align: center;
+    padding: 0.5rem 1rem;
+    font-size: 0.9rem;
+    letter-spacing: 0.5px;
+    font-family: Arial, sans-serif;
+  ">
+    ⚒️ This is a <strong>demo portfolio site</strong> built by 
+    <a href="https://codeforgeddigital.ca" target="_blank" style="color:#facc15; text-decoration:none;">
+      Code Forged Digital Inc.
+    </a>
+    Ironwood Renos is not a real business.
+  </div>
+
+<!-- Hero Section (Tailwind only, compact CTA) -->
+<section class="relative text-white text-center">
+  <!-- Full image -->
   <img
     src="images/ironwood-renos-banner.webp"
     alt="Ironwood Renos Banner"
-    style="display:block;width:100%;height:auto;max-height:100vh;object-fit:contain;"
+    class="w-full h-auto max-h-screen object-contain block"
   />
 
-  <!-- Centered overlay (title + tagline + CTA) -->
-  <div
-    style="
-      position:absolute;inset:0;
-      display:flex;align-items:center;justify-content:center;
-      padding:0 1rem;
-    "
-  >
-    <div>
-      <h1 class="text-hero-xl font-semibold mb-2">Ironwood Renos</h1>
-      <p class="text-lg mb-6">Quality Renovations Built to Last</p>
-      <a href="#contact"
-         class="btn-primary"
-         >Request a Quote</a>
-    </div>
+  <!-- Centered text -->
+  <div class="absolute inset-0 flex flex-col justify-center items-center px-4">
+    <h1 class="text-hero-xl font-semibold mb-2 drop-shadow-lg">
+      Ironwood Renos
+    </h1>
+    <p class="text-lg drop-shadow-md">
+      Quality Renovations Built to Last
+    </p>
+  </div>
+
+  <!-- Smaller CTA anchored to bottom -->
+  <div class="absolute left-0 right-0 flex justify-center bottom-10 sm:bottom-12 md:bottom-16">
+    <a
+      href="#contact"
+      class="btn-primary-sm"
+    >
+      Request a Quote
+    </a>
   </div>
 </section>
-
-
-
 
   <!-- Services Section -->
   <section class="bg-bg-light">
@@ -118,7 +136,7 @@
       <p>© 2025 Ironwood Renos. Portfolio project by Code Forged Digital.</p>
 
       <a href="#" class="mt-4 sm:mt-0 btn-primary-sm">
-        Request a Quote
+        Contact Us
       </a>
     </div>
   </footer>
