fixed link in banner

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     font-family: Arial, sans-serif;
   ">
     ⚒️ This is a <strong>demo portfolio site</strong> built by 
-    <a href="https://codeforgeddigital.ca" target="_blank" style="color:#facc15; text-decoration:none;">
+    <a href="https://www.codeforgeddigital.ca" target="_blank" rel="noopener noreferrer" style="color:#facc15; text-decoration:none;">
       Code Forged Digital Inc.
     </a>
     Ironwood Renos is not a real business.
